@@ -39,35 +39,35 @@ import javax.swing.JPanel;
 public class LevelFile extends JPanel {
     private static final long serialVersionUID = -4658344536954311587L;
     public String m_file;
-    private BitMap m_bitmap;
+    private final BitMap m_bitmap;
     private BufferedInputStream m_stream;
     private boolean m_containsBM;
     private boolean hasELVLData;
 
     // eLVL ATTR tags... vector of vector of Strings
-    public Vector eLvlAttrs = new Vector();
+    public Vector<Vector<String>> eLvlAttrs = new Vector<>();
     public static final int DEFAULT_TAG_COUNT = 6;
 
-    // Vector of loaded reginons
-    public Vector regions;
+    // Vector of loaded regions
+    public Vector<Region> loadedRegions;
 
-    // unkownn ELVL chunks read in on load
-    public Vector unknownELVLData = new Vector();
+    // unknown ELVL chunks read in on load
+    public Vector<Byte> unknownELVLData = new Vector<>();
 
     // the actual data we're going to save, as a Vector of Bytes... saved by
     // makeELvlDataForSaving
-    public Vector eLVLData;
+    public Vector<Byte> eLVLData;
 
-    private String m_type;
-    private int m_size;
-    private int m_offset;
-    private int m_width;
-    private int m_height;
-    private int m_bitCount;
-    private int m_compressionType;
-    private int m_colorsUsed;
+    // private String m_type;
+    // private int m_size;
+    // private int m_offset;
+    // private int m_width;
+    // private int m_height;
+    // private int m_bitCount;
+    // private int m_compressionType;
+    // private int m_colorsUsed;
 
-    private short[][] m_level = new short[1024][1024];
+    private final short[][] m_level = new short[1024][1024];
 
     /**
      * Reads in a *.lvl file.
@@ -79,7 +79,8 @@ public class LevelFile extends JPanel {
      * @param hasELVL        if the file has the extended lvz information
      * @param file           string representation of the file (path)
      */
-    public LevelFile(BufferedInputStream bufferedStream, BitMap b, boolean hasBMP, boolean hasELVL, String file) {
+    public LevelFile(final BufferedInputStream bufferedStream, final BitMap b, final boolean hasBMP,
+            final boolean hasELVL, final String file) {
 
         m_bitmap = b;
         m_containsBM = hasBMP;
@@ -94,7 +95,7 @@ public class LevelFile extends JPanel {
      * @param b The tileset bitmap (note read in default bitmap if lvl file does not
      *          contain bitmap portion)
      */
-    public LevelFile(BitMap b) {
+    public LevelFile(final BitMap b) {
         m_bitmap = b;
     }
 
@@ -107,32 +108,32 @@ public class LevelFile extends JPanel {
             userName = "User";
         }
 
-        Vector row = new Vector();
+        Vector<String> row = new Vector<>();
         row.add("NAME");
         row.add("Unnamed");
         eLvlAttrs.add(row);
 
-        row = new Vector();
+        row = new Vector<>();
         row.add("VERSION");
         row.add("1.0");
         eLvlAttrs.add(row);
 
-        row = new Vector();
+        row = new Vector<>();
         row.add("ZONE");
         row.add(userName + "'s Zone");
         eLvlAttrs.add(row);
 
-        row = new Vector();
+        row = new Vector<>();
         row.add("MAPCREATOR");
         row.add(userName);
         eLvlAttrs.add(row);
 
-        row = new Vector();
+        row = new Vector<>();
         row.add("TILESETCREATOR");
         row.add(userName);
         eLvlAttrs.add(row);
 
-        row = new Vector();
+        row = new Vector<>();
         row.add("PROGRAM");
         row.add("Continuum Level Ini Tool");
         eLvlAttrs.add(row);
@@ -145,28 +146,28 @@ public class LevelFile extends JPanel {
      */
     private String readELvlData() {
         String error = null;
-        regions = new Vector();
+        loadedRegions = new Vector<>();
 
         if (!available(12)) {
             error = "File ended before we could read the eLVL header.";
         } else {
             // read header
-            byte[] header = readIn(12);
-            ByteArray headerArray = new ByteArray(header);
+            final byte[] header = readIn(12);
+            final ByteArray headerArray = new ByteArray(header);
             ByteArray curData;
 
             if (!headerArray.readString(0, 4).equals("elvl")) {
                 error = "The elvl header tag was not detected at the start of " + " the eLVL data section.";
             } else {
-                int size = headerArray.readLittleEndianInt(4); // total size of the metadata section
+                final int size = headerArray.readLittleEndianInt(4); // total size of the metadata section
                 int current = 12; // current number of bytes read
 
                 while (current < size && error == null) {
                     if (available(8)) {
                         curData = new ByteArray(readIn(8));
                         current += 8;
-                        String type = curData.readString(0, 4);
-                        int chunkLength = curData.readLittleEndianInt(4);
+                        final String type = curData.readString(0, 4);
+                        final int chunkLength = curData.readLittleEndianInt(4);
 
                         if (!available(chunkLength)) {
                             error = "EOF while reading in a eLVL chunk of type " + type;
@@ -177,14 +178,14 @@ public class LevelFile extends JPanel {
                         if (type.equals("ATTR")) { // attribute chunk
                             current += chunkLength;
                             curData = new ByteArray(readIn(chunkLength));
-                            String attr = curData.readString(0, chunkLength);
-                            String[] keyTag = attr.split("=");
+                            final String attr = curData.readString(0, chunkLength);
+                            final String[] keyTag = attr.split("=");
                             if (keyTag.length != 2) {
                                 error = "ATTR tag does not contain exactly " + "one '=' sign: " + attr;
                                 break;
                             }
 
-                            Vector row = new Vector();
+                            final Vector<String> row = new Vector<>();
                             row.add(keyTag[0]);
                             row.add(keyTag[1]);
                             eLvlAttrs.add(row);
@@ -192,45 +193,45 @@ public class LevelFile extends JPanel {
                             curData = new ByteArray(readIn(chunkLength));
                             current += chunkLength;
 
-                            Region r = new Region();
-                            String rv = r.decodeRegion(curData);
+                            final Region r = new Region();
+                            final String rv = r.decodeRegion(curData);
 
                             if (rv != null) {
                                 error = rv;
                                 break;
                             }
 
-                            regions.add(r);
+                            loadedRegions.add(r);
                         } else // unknown chunk
                         {
                             // System.out.println("unknown chunk: " + type);
                             curData = new ByteArray(readIn(chunkLength));
 
                             // encode header
-                            unknownELVLData.add(new Byte((byte) type.charAt(0)));
-                            unknownELVLData.add(new Byte((byte) type.charAt(1)));
-                            unknownELVLData.add(new Byte((byte) type.charAt(2)));
-                            unknownELVLData.add(new Byte((byte) type.charAt(3)));
-                            byte[] dword = BitmapSaving.toDWORD(chunkLength);
+                            unknownELVLData.add(Byte.valueOf((byte) type.charAt(0)));
+                            unknownELVLData.add(Byte.valueOf((byte) type.charAt(1)));
+                            unknownELVLData.add(Byte.valueOf((byte) type.charAt(2)));
+                            unknownELVLData.add(Byte.valueOf((byte) type.charAt(3)));
+                            final byte[] dword = BitmapSaving.toDWORD(chunkLength);
                             for (int c = 0; c < 4; ++c) {
-                                unknownELVLData.add(new Byte(dword[c]));
+                                unknownELVLData.add(Byte.valueOf(dword[c]));
                             }
 
                             // encode data
                             for (int c = 0; c < chunkLength; ++c) {
-                                byte b = curData.readByte(c);
-                                unknownELVLData.add(new Byte(b));
+                                final byte b = curData.readByte(c);
+                                unknownELVLData.add(Byte.valueOf(b));
                             }
 
                             // encode padding
-                            int padding = 4 - chunkLength % 4;
+                            final int padding = 4 - chunkLength % 4;
                             if (padding != 4) {
-                                unknownELVLData.add(new Byte((byte) 0));
+                                unknownELVLData.add(Byte.valueOf((byte) 0));
                             }
                         }
 
                         // read in padding up to 4 byte boundry
-                        int padding = 4 - (chunkLength % 4);
+                        final int padding = 4 - (chunkLength % 4);
                         if (padding != 4) {
                             if (available(padding)) {
                                 readIn(padding);
@@ -255,7 +256,7 @@ public class LevelFile extends JPanel {
      *
      * @return null or the error message
      */
-    public String readLevel() {
+    public String readLevel() throws IOException {
         if (hasELVLData) {
             readIn(m_bitmap.ELvlOffset);
         } else if (m_containsBM) {
@@ -271,21 +272,18 @@ public class LevelFile extends JPanel {
 
         if (error == null) {
             while (available(4)) {
-                byte[] b = readIn(4);
-                ByteArray array = new ByteArray(b);
-                int i = array.readLittleEndianInt(0);
-                int tile = i >> 24 & 0x00ff;
-                int y = (i >> 12) & 0x03FF;
-                int x = i & 0x03FF;
+                final byte[] b = readIn(4);
+                final ByteArray array = new ByteArray(b);
+                final int i = array.readLittleEndianInt(0);
+                final int tile = i >> 24 & 0x00ff;
+                final int y = (i >> 12) & 0x03FF;
+                final int x = i & 0x03FF;
                 m_level[x][y] = (short) tile;
             }
         }
 
         // Close the stream so it doesn't remain opened.
-        try {
-            m_stream.close();
-        } catch (IOException e) {
-        }
+        m_stream.close();
 
         return error;
     }
@@ -298,7 +296,8 @@ public class LevelFile extends JPanel {
      * @param map     the map array[][] to save
      * @param regions the vector of regions to save
      */
-    public void saveLevelAs(String where, Image tileset, short[][] map, Vector regions) {
+    public void saveLevelAs(final String where, final Image tileset, final short[][] map,
+            final Vector<Region> regions) {
         m_file = where;
         saveLevel(tileset, map, regions);
     }
@@ -309,57 +308,57 @@ public class LevelFile extends JPanel {
      *
      * @param regions the vector of Regions
      */
-    private void makeELvlDataForSaving(Vector regions) {
-        eLVLData = new Vector();
+    private void makeELvlDataForSaving(final Vector<Region> regions) {
+        eLVLData = new Vector<>();
 
         // first save the ATTR tags
-        int size = eLvlAttrs.size();
+        final int size = eLvlAttrs.size();
         for (int x = 0; x < size; ++x) {
-            Vector row = (Vector) eLvlAttrs.get(x);
-            String one = ((String) row.get(0)).replace('=', '-');
-            String two = ((String) row.get(1)).replace('=', '-');
-            String save = one + "=" + two;
+            final Vector<String> row = eLvlAttrs.get(x);
+            final String one = row.get(0).replace('=', '-');
+            final String two = row.get(1).replace('=', '-');
+            final String save = one + "=" + two;
 
             // save chunk header
-            eLVLData.add(new Byte((byte) 'A'));
-            eLVLData.add(new Byte((byte) 'T'));
-            eLVLData.add(new Byte((byte) 'T'));
-            eLVLData.add(new Byte((byte) 'R'));
+            eLVLData.add(Byte.valueOf((byte) 'A'));
+            eLVLData.add(Byte.valueOf((byte) 'T'));
+            eLVLData.add(Byte.valueOf((byte) 'T'));
+            eLVLData.add(Byte.valueOf((byte) 'R'));
 
-            int chunkLength = save.length();
-            byte[] chunkSizeBytes = BitmapSaving.toDWORD(chunkLength);
+            final int chunkLength = save.length();
+            final byte[] chunkSizeBytes = BitmapSaving.toDWORD(chunkLength);
             for (int c = 0; c < 4; ++c) {
-                eLVLData.add(new Byte(chunkSizeBytes[c]));
+                eLVLData.add(Byte.valueOf(chunkSizeBytes[c]));
             }
 
-            int len = save.length();
+            final int len = save.length();
             for (int c = 0; c < len; ++c) {
-                byte letter = (byte) save.charAt(c);
-                eLVLData.add(new Byte(letter));
+                final byte letter = (byte) save.charAt(c);
+                eLVLData.add(Byte.valueOf(letter));
             }
 
             // padding
-            int padding = 4 - (chunkLength % 4);
+            final int padding = 4 - (chunkLength % 4);
             if (padding != 4) {
                 for (int c = 0; c < padding; ++c) {
-                    eLVLData.add(new Byte((byte) 0)); // padding byte
+                    eLVLData.add(Byte.valueOf((byte) 0)); // padding byte
                 }
             }
         }
 
         // now the REGN tags
-        for (int x = 0; x < regions.size(); ++x) {
-            Region r = (Region) regions.get(x);
+        for (final Object region : regions) {
+            final Region r = (Region) region;
 
-            eLVLData.add(new Byte((byte) 'R'));
-            eLVLData.add(new Byte((byte) 'E'));
-            eLVLData.add(new Byte((byte) 'G'));
-            eLVLData.add(new Byte((byte) 'N'));
+            eLVLData.add(Byte.valueOf((byte) 'R'));
+            eLVLData.add(Byte.valueOf((byte) 'E'));
+            eLVLData.add(Byte.valueOf((byte) 'G'));
+            eLVLData.add(Byte.valueOf((byte) 'N'));
 
-            Vector curRegionEncoded = r.getEncodedRegion();
-            byte[] dword = BitmapSaving.toDWORD(curRegionEncoded.size());
+            final Vector<Byte> curRegionEncoded = r.getEncodedRegion();
+            final byte[] dword = BitmapSaving.toDWORD(curRegionEncoded.size());
             for (int c = 0; c < 4; ++c) {
-                eLVLData.add(new Byte(dword[c]));
+                eLVLData.add(Byte.valueOf(dword[c]));
             }
 
             eLVLData.addAll(curRegionEncoded);
@@ -375,11 +374,11 @@ public class LevelFile extends JPanel {
      *
      * @param out the output stream to save to
      */
-    private void saveELvlData(BufferedOutputStream out) throws IOException {
-        int size = eLVLData.size();
-        byte[] array = new byte[size];
+    private void saveELvlData(final BufferedOutputStream out) throws IOException {
+        final int size = eLVLData.size();
+        final byte[] array = new byte[size];
         byte[] dword = new byte[4];
-        byte[] word = new byte[2];
+        final byte[] word = new byte[2];
         word[0] = word[1] = 0;
 
         // save two bytes padding
@@ -400,7 +399,7 @@ public class LevelFile extends JPanel {
 
         // save data
         for (int x = 0; x < size; ++x) {
-            array[x] = ((Byte) eLVLData.get(x)).byteValue();
+            array[x] = eLVLData.get(x).byteValue();
         }
 
         out.write(array);
@@ -415,11 +414,10 @@ public class LevelFile extends JPanel {
      * @param map     the map aray[][] to save
      * @param regions list of regions
      */
-    public void saveLevel(Image tileset, short[][] map, Vector regions) {
-        try {
-            BufferedOutputStream out = new BufferedOutputStream(new FileOutputStream(m_file));
-
-            boolean containsELVLData = eLvlAttrs.size() > 0;
+    public void saveLevel(final Image tileset, final short[][] map, final Vector<Region> regions) {
+        try (FileOutputStream fos = new FileOutputStream(m_file);
+                BufferedOutputStream out = new BufferedOutputStream(fos)) {
+            // final boolean containsELVLData = eLvlAttrs.size() > 0;
             makeELvlDataForSaving(regions);
 
             // save bitmap
@@ -433,40 +431,38 @@ public class LevelFile extends JPanel {
             // save tiles
             for (int y = 0; y < 1024; ++y) {
                 for (int x = 0; x < 1024; ++x) {
-                    int tile = map[x][y];
+                    final int tile = map[x][y];
 
                     if (tile == 0 || tile == -1) {
                         continue;
                     }
 
-                    int intstruct = (tile << 24) | (y << 12) | x;
-                    byte[] ar = BitmapSaving.toDWORD(intstruct);
+                    final int intstruct = (tile << 24) | (y << 12) | x;
+                    final byte[] ar = BitmapSaving.toDWORD(intstruct);
                     out.write(ar);
                 }
             }
-
-            out.close();
-        } catch (Exception e) {
+        } catch (final IOException e) {
             JOptionPane.showMessageDialog(null, e.toString());
         }
 
     }
 
-    public byte[] readIn(int n) {
-        byte[] b = new byte[n];
+    public byte[] readIn(final int n) {
+        final byte[] b = new byte[n];
         try {
             m_stream.read(b);
             return b;
-        } catch (IOException e) {
+        } catch (final IOException e) {
             System.out.println(e);
             return new byte[0];
         }
     }
 
-    public boolean available(int n) {
+    public boolean available(final int n) {
         try {
             return m_stream.available() >= n;
-        } catch (IOException e) {
+        } catch (final IOException e) {
             System.out.println(e);
             return false;
         }
@@ -478,15 +474,15 @@ public class LevelFile extends JPanel {
 
     public Image[] getTiles() {
 
-        int[] m_image = m_bitmap.getImageData();
+        final int[] m_image = m_bitmap.getImageData();
 
-        Image[] tiles = new Image[190];
+        final Image[] tiles = new Image[190];
         for (int i = 0; i < 190; i++) {
 
-            int yOffset = (int) Math.floor(i / 19) * 4864;
-            int xOffset = (int) (i - Math.floor(i / 19) * 19) * 16;
+            final int yOffset = (int) Math.floor(i / 19) * 4864;
+            final int xOffset = (int) (i - Math.floor(i / 19) * 19) * 16;
 
-            int thisTile[] = new int[256];
+            final int thisTile[] = new int[256];
             for (int y = 0; y < 16; y++) {
                 for (int x = 0; x < 16; x++) {
                     thisTile[y * 16 + x] = m_image[(yOffset + xOffset) + y * 304 + x];
