@@ -65,15 +65,15 @@ public class Region {
     public int x = 512, y = 512;
     public String arena = "";
 
-    public ArrayList rects = new ArrayList();
-    public Vector unknownBytes = new Vector(); // region bytes loaded... but unknown or unused by the program
+    public ArrayList<Rectangle> rects = new ArrayList<>();
+    public Vector<Byte> unknownBytes = new Vector<>(); // region bytes loaded... but unknown or unused by the program
 
     public Region() {
         name = "@THIS_IS_A_BUG->ERROR"; // the user should never see this
         color = getRandomColor();
     }
 
-    public Region(String newName, Color newColor) {
+    public Region(final String newName, final Color newColor) {
         name = newName;
         color = newColor;
     }
@@ -83,76 +83,76 @@ public class Region {
      *
      * @return a Vector of Bytes representing this region
      */
-    public Vector getEncodedRegion() {
-        Vector encoding = new Vector();
+    public Vector<Byte> getEncodedRegion() {
+        final Vector<Byte> encoding = new Vector<>();
         // encode isBase
         if (isBase) {
-            encoding.add(new Byte((byte) 'r'));
-            encoding.add(new Byte((byte) 'B'));
-            encoding.add(new Byte((byte) 'S'));
-            encoding.add(new Byte((byte) 'E'));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
+            encoding.add(Byte.valueOf((byte) 'r'));
+            encoding.add(Byte.valueOf((byte) 'B'));
+            encoding.add(Byte.valueOf((byte) 'S'));
+            encoding.add(Byte.valueOf((byte) 'E'));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
         }
         // encode noFlags
         if (isNoFlags) {
-            encoding.add(new Byte((byte) 'r'));
-            encoding.add(new Byte((byte) 'N'));
-            encoding.add(new Byte((byte) 'F'));
-            encoding.add(new Byte((byte) 'L'));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
+            encoding.add(Byte.valueOf((byte) 'r'));
+            encoding.add(Byte.valueOf((byte) 'N'));
+            encoding.add(Byte.valueOf((byte) 'F'));
+            encoding.add(Byte.valueOf((byte) 'L'));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
         }
         // encode noWeps
         if (isNoWeps) {
-            encoding.add(new Byte((byte) 'r'));
-            encoding.add(new Byte((byte) 'N'));
-            encoding.add(new Byte((byte) 'W'));
-            encoding.add(new Byte((byte) 'P'));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
+            encoding.add(Byte.valueOf((byte) 'r'));
+            encoding.add(Byte.valueOf((byte) 'N'));
+            encoding.add(Byte.valueOf((byte) 'W'));
+            encoding.add(Byte.valueOf((byte) 'P'));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
         }
         // encode noAnti
         if (isNoAnti) {
-            encoding.add(new Byte((byte) 'r'));
-            encoding.add(new Byte((byte) 'N'));
-            encoding.add(new Byte((byte) 'A'));
-            encoding.add(new Byte((byte) 'W'));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
-            encoding.add(new Byte((byte) 0));
+            encoding.add(Byte.valueOf((byte) 'r'));
+            encoding.add(Byte.valueOf((byte) 'N'));
+            encoding.add(Byte.valueOf((byte) 'A'));
+            encoding.add(Byte.valueOf((byte) 'W'));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
+            encoding.add(Byte.valueOf((byte) 0));
         }
         // encode isAutoWArp
         if (isAutoWarp) {
-            encoding.add(new Byte((byte) 'r'));
-            encoding.add(new Byte((byte) 'A'));
-            encoding.add(new Byte((byte) 'W'));
-            encoding.add(new Byte((byte) 'P'));
+            encoding.add(Byte.valueOf((byte) 'r'));
+            encoding.add(Byte.valueOf((byte) 'A'));
+            encoding.add(Byte.valueOf((byte) 'W'));
+            encoding.add(Byte.valueOf((byte) 'P'));
             if (!arena.equals("")) { // encode with arena, size = 20
-                byte[] dword = BitmapSaving.toDWORD(20);
+                final byte[] dword = BitmapSaving.toDWORD(20);
                 for (int c = 0; c < 4; ++c) {
-                    encoding.add(new Byte(dword[c]));
+                    encoding.add(Byte.valueOf(dword[c]));
                 }
 
                 // save x
                 byte[] word = BitmapSaving.toWORD(x);
 
                 for (int c = 0; c < 2; ++c) {
-                    encoding.add(new Byte(word[c]));
+                    encoding.add(Byte.valueOf(word[c]));
                 }
 
                 // save y
                 word = BitmapSaving.toWORD(y);
 
                 for (int c = 0; c < 2; ++c) {
-                    encoding.add(new Byte(word[c]));
+                    encoding.add(Byte.valueOf(word[c]));
                 }
 
                 // save arena
@@ -160,88 +160,88 @@ public class Region {
                     arena = arena.substring(15);
                 }
 
-                int len = arena.length();
+                final int len = arena.length();
                 for (int c = 0; c < len; ++c) {
-                    encoding.add(new Byte((byte) arena.charAt(c)));
+                    encoding.add(Byte.valueOf((byte) arena.charAt(c)));
                 }
 
                 for (int c = len; c < 16; ++c) {
-                    encoding.add(new Byte((byte) 0));
+                    encoding.add(Byte.valueOf((byte) 0));
                 }
 
             } else { // no arena, size = 4
-                byte[] dword = BitmapSaving.toDWORD(4);
+                final byte[] dword = BitmapSaving.toDWORD(4);
                 for (int c = 0; c < 4; ++c) {
-                    encoding.add(new Byte(dword[c]));
+                    encoding.add(Byte.valueOf(dword[c]));
                 }
 
                 // save x
                 byte[] word = BitmapSaving.toWORD(x);
 
                 for (int c = 0; c < 2; ++c) {
-                    encoding.add(new Byte(word[c]));
+                    encoding.add(Byte.valueOf(word[c]));
                 }
 
                 // save y
                 word = BitmapSaving.toWORD(y);
 
                 for (int c = 0; c < 2; ++c) {
-                    encoding.add(new Byte(word[c]));
+                    encoding.add(Byte.valueOf(word[c]));
                 }
             }
         }
         // encode unknown bytes
-        for (int c = 0; c < unknownBytes.size(); ++c) {
-            encoding.add(unknownBytes.get(c));
+        for (final Byte unknownByte : unknownBytes) {
+            encoding.add(unknownByte);
         }
         // encoded name
-        encoding.add(new Byte((byte) 'r'));
-        encoding.add(new Byte((byte) 'N'));
-        encoding.add(new Byte((byte) 'A'));
-        encoding.add(new Byte((byte) 'M'));
+        encoding.add(Byte.valueOf((byte) 'r'));
+        encoding.add(Byte.valueOf((byte) 'N'));
+        encoding.add(Byte.valueOf((byte) 'A'));
+        encoding.add(Byte.valueOf((byte) 'M'));
 
-        int len = name.length();
+        final int len = name.length();
         byte[] dword = BitmapSaving.toDWORD(len);
         for (int c = 0; c < 4; ++c) {
-            encoding.add(new Byte(dword[c]));
+            encoding.add(Byte.valueOf(dword[c]));
         }
 
         for (int c = 0; c < len; ++c) {
-            encoding.add(new Byte((byte) name.charAt(c)));
+            encoding.add(Byte.valueOf((byte) name.charAt(c)));
         }
 
         // pad it
         int padding = 4 - len % 4;
         if (padding != 4) {
             for (int c = 0; c < padding; ++c) {
-                encoding.add(new Byte((byte) 0));
+                encoding.add(Byte.valueOf((byte) 0));
             }
         }
 
         // encode tiles
-        encoding.add(new Byte((byte) 'r'));
-        encoding.add(new Byte((byte) 'T'));
-        encoding.add(new Byte((byte) 'I'));
-        encoding.add(new Byte((byte) 'L'));
+        encoding.add(Byte.valueOf((byte) 'r'));
+        encoding.add(Byte.valueOf((byte) 'T'));
+        encoding.add(Byte.valueOf((byte) 'I'));
+        encoding.add(Byte.valueOf((byte) 'L'));
 
         // we now need the length! yuck! ok let's make another vector containing just
         // the encoding
-        Vector tileData = getCompressedRGN();
+        final Vector<Byte> tileData = getCompressedRGN();
 
         dword = BitmapSaving.toDWORD(tileData.size());
         for (int c = 0; c < 4; ++c) {
-            encoding.add(new Byte(dword[c]));
+            encoding.add(Byte.valueOf(dword[c]));
         }
 
-        for (int c = 0; c < tileData.size(); ++c) {
-            encoding.add(tileData.get(c));
+        for (final Byte element : tileData) {
+            encoding.add(element);
         }
 
         // pad it
         padding = 4 - tileData.size() % 4;
         if (padding != 4) {
             for (int c = 0; c < padding; ++c) {
-                encoding.add(new Byte((byte) 0));
+                encoding.add(Byte.valueOf((byte) 0));
             }
         }
 
@@ -251,35 +251,35 @@ public class Region {
     /**
      * Get the compressed tiledata as a vector of Bytes
      *
-     * @return the vector of bytes represting the encoding of this tiledata
+     * @return the vector of bytes representing the encoding of this tiledata
      */
-    private Vector getCompressedRGN() {
-        Vector bytes = new Vector();
+    private Vector<Byte> getCompressedRGN() {
+        final Vector<Byte> bytes = new Vector<>();
 
-        boolean rgn[][] = new boolean[1024][1024];
+        final boolean rgn[][] = new boolean[1024][1024];
 
         // start empty
-        for (int y = 0; y < 1024; ++y) {
-            for (int x = 0; x < 1024; ++x) {
-                rgn[y][x] = false;
+        for (int yPos = 0; yPos < 1024; ++yPos) {
+            for (int xPos = 0; xPos < 1024; ++xPos) {
+                rgn[yPos][xPos] = false;
             }
         }
 
         // add rectangles
-        for (int c = 0; c < rects.size(); ++c) {
-            Rectangle r = (Rectangle) rects.get(c);
+        for (final Object rect : rects) {
+            final Rectangle r = (Rectangle) rect;
 
-            int endX = r.x + r.width;
-            int endY = r.y + r.height;
+            final int endX = r.x + r.width;
+            final int endY = r.y + r.height;
 
-            for (int y = r.y; y < endY; ++y) {
-                for (int x = r.x; x < endX; ++x) {
-                    rgn[y][x] = true;
+            for (int yPos = r.y; yPos < endY; ++yPos) {
+                for (int xPos = r.x; xPos < endX; ++xPos) {
+                    rgn[yPos][xPos] = true;
                 }
             }
         }
 
-        Vector lastRow = null;
+        Vector<Byte> lastRow = null;
         int lastRowSameCount = 0;
         int emptyRowCount = 0;
 
@@ -321,10 +321,10 @@ public class Region {
             }
 
             // we have to encode a single row
-            Vector encodedRow = new Vector();
+            final Vector<Byte> encodedRow = new Vector<>();
             curY = 0;
             while (curY < 1024) {
-                boolean encodingTiles = rgn[curRow][curY];
+                final boolean encodingTiles = rgn[curRow][curY];
 
                 int count = 0;
 
@@ -382,7 +382,7 @@ public class Region {
      *
      * @return a Vector of bytes containing the encoding
      */
-    private static Vector encodeEmptyRows(int count) {
+    private static Vector<Byte> encodeEmptyRows(final int count) {
         /*
          * first, rows that contain no tiles at all can (optionally) be encoded
          * specially:
@@ -391,20 +391,21 @@ public class Region {
          * rows of all empty
          */
 
-        Vector code = new Vector();
+        final Vector<Byte> code = new Vector<>();
 
-        if (count <= 32) {
-            count--; // cause it's 1-32 not 0-31
-            byte encode = (byte) (count | 0x80);
-            code.add(new Byte(encode));
+        int i = count;
+        if (i <= 32) {
+            i--; // cause it's 1-32 not 0-31
+            final byte encode = (byte) (i | 0x80);
+            code.add(Byte.valueOf(encode));
 
         } else {
-            count--;
-            byte one = (byte) ((count >> 8) | 0xA0);
-            byte two = (byte) ((count & 0x00FF));
+            i--;
+            final byte one = (byte) ((i >> 8) | 0xA0);
+            final byte two = (byte) ((i & 0x00FF));
 
-            code.add(new Byte(one));
-            code.add(new Byte(two));
+            code.add(Byte.valueOf(one));
+            code.add(Byte.valueOf(two));
 
         }
 
@@ -414,11 +415,11 @@ public class Region {
     /**
      * Encode a run
      *
-     * @param count    the number of tiles to cover
+     * @param i        the number of tiles to cover
      * @param inRegion is this a run of region tiles? (or empty spaces)
      * @return the Vector of encodedBytes for this run
      */
-    private static Vector encodeRun(int count, boolean inRegion) {
+    private static Vector<Byte> encodeRun(final int count, final boolean inRegion) {
         /*
          * for each row, split it into runs of empty tiles and present tiles. for each
          * run, output one of these bit sequences:
@@ -428,36 +429,37 @@ public class Region {
          * 0110 00nn nnnn nnnn - n+1 (1-1024) present tiles in a row
          */
 
-        Vector code = new Vector();
+        final Vector<Byte> code = new Vector<>();
+        int i = count;
 
-        if (count <= 32) {
-            --count;
+        if (i <= 32) {
+            --i;
             byte one;
 
             if (!inRegion) {
-                one = (byte) count;
+                one = (byte) i;
             } else {
-                one = (byte) (count | 0x40);
+                one = (byte) (i | 0x40);
             }
 
-            code.add(new Byte(one));
+            code.add(Byte.valueOf(one));
 
         } else {
-            --count;
+            --i;
             byte one, two;
 
             if (!inRegion) // empty tiles
             {
-                one = (byte) ((count >> 8) | 0x20);
-                two = (byte) (count & 0x00FF);
+                one = (byte) ((i >> 8) | 0x20);
+                two = (byte) (i & 0x00FF);
             } else // present tiles
             {
-                one = (byte) ((count >> 8) | 0x60);
-                two = (byte) (count & 0x00FF);
+                one = (byte) ((i >> 8) | 0x60);
+                two = (byte) (i & 0x00FF);
             }
 
-            code.add(new Byte(one));
-            code.add(new Byte(two));
+            code.add(Byte.valueOf(one));
+            code.add(Byte.valueOf(two));
 
         }
 
@@ -470,7 +472,7 @@ public class Region {
      * @param count the number of times we repeated
      * @return a Vector of Bytes containing the encoding of this repetition
      */
-    private static Vector encodeRepeatLastRow(int count) {
+    private static Vector<Byte> encodeRepeatLastRow(final int count) {
         /*
          * if the same pattern of tiles appears in more than one consecutive row, you
          * can use these special codes to save more space:
@@ -479,19 +481,19 @@ public class Region {
          * last row n+1 (1-1024) times
          */
 
-        Vector code = new Vector();
-
-        if (count <= 32) {
-            count--; // cause it's 1-32 not 0-31
-            byte encode = (byte) (count | 0xC0);
-            code.add(new Byte(encode));
+        final Vector<Byte> code = new Vector<>();
+        int i = count;
+        if (i <= 32) {
+            i--; // cause it's 1-32 not 0-31
+            final byte encode = (byte) (i | 0xC0);
+            code.add(Byte.valueOf(encode));
         } else {
-            count--;
-            byte one = (byte) ((count >> 8) | 0xE0);
-            byte two = (byte) ((count & 0x00FF));
+            i--;
+            final byte one = (byte) ((i >> 8) | 0xE0);
+            final byte two = (byte) ((i & 0x00FF));
 
-            code.add(new Byte(one));
-            code.add(new Byte(two));
+            code.add(Byte.valueOf(one));
+            code.add(Byte.valueOf(two));
         }
 
         return code;
@@ -502,7 +504,8 @@ public class Region {
      *
      * @param b the byte to convert
      */
-    private static String getBinaryStringOfByte(byte b) {
+    @SuppressWarnings("unused")
+    private static String getBinaryStringOfByte(final byte b) {
         int mask = 0x00000080;
         String rv = "";
 
@@ -520,9 +523,9 @@ public class Region {
      * @param encoding an eLVL REGN chunk, without the header
      * @return the error String, or null
      */
-    public String decodeRegion(ByteArray encoding) {
+    public String decodeRegion(final ByteArray encoding) {
         String error = null;
-        int superChunkLen = encoding.m_array.length;
+        final int superChunkLen = encoding.m_array.length;
         int cur = 0;
 
         while (cur < superChunkLen) {
@@ -531,9 +534,9 @@ public class Region {
                 error = "Not enogh bytes to make a subchunk header in REGN superchunk.";
                 break;
             }
-            String type = encoding.readString(cur, 4);
+            final String type = encoding.readString(cur, 4);
             cur += 4;
-            int len = encoding.readLittleEndianInt(cur);
+            final int len = encoding.readLittleEndianInt(cur);
             cur += 4;
 
             // "rBSE" - whether the region represents a base in a flag game
@@ -565,7 +568,7 @@ public class Region {
                 name = encoding.readString(cur, len);
                 cur += len;
 
-                int padding = 4 - len % 4;
+                final int padding = 4 - len % 4;
                 if (padding != 4) {
                     cur += padding;
                 }
@@ -579,34 +582,34 @@ public class Region {
 
                 cur += len;
 
-                int padding = 4 - len % 4;
+                final int padding = 4 - len % 4;
                 if (padding != 4) {
                     cur += padding;
                 }
             } // other - unknown tiles, or maybe that python stuff
             else {
                 // encode header
-                unknownBytes.add(new Byte((byte) type.charAt(0)));
-                unknownBytes.add(new Byte((byte) type.charAt(1)));
-                unknownBytes.add(new Byte((byte) type.charAt(2)));
-                unknownBytes.add(new Byte((byte) type.charAt(3)));
-                byte[] dword = BitmapSaving.toDWORD(len);
+                unknownBytes.add(Byte.valueOf((byte) type.charAt(0)));
+                unknownBytes.add(Byte.valueOf((byte) type.charAt(1)));
+                unknownBytes.add(Byte.valueOf((byte) type.charAt(2)));
+                unknownBytes.add(Byte.valueOf((byte) type.charAt(3)));
+                final byte[] dword = BitmapSaving.toDWORD(len);
                 for (int c = 0; c < 4; ++c) {
-                    unknownBytes.add(new Byte(dword[c]));
+                    unknownBytes.add(Byte.valueOf(dword[c]));
                 }
 
                 // encode data
-                int endIndex = cur + len;
+                final int endIndex = cur + len;
                 for (int c = cur; c < endIndex; ++c) {
-                    byte b = encoding.readByte(c);
-                    unknownBytes.add(new Byte(b));
+                    final byte b = encoding.readByte(c);
+                    unknownBytes.add(Byte.valueOf(b));
                 }
                 cur += len;
 
                 // encode padding
-                int padding = 4 - len % 4;
+                final int padding = 4 - len % 4;
                 if (padding != 4) {
-                    unknownBytes.add(new Byte((byte) 0));
+                    unknownBytes.add(Byte.valueOf((byte) 0));
                     cur += padding;
                 }
             }
@@ -628,26 +631,27 @@ public class Region {
      * @param len    the length to read
      * @return the error String
      */
-    private String decodeTiles(byte[] data, int offset, int size) {
+    private String decodeTiles(final byte[] data, final int offset, final int size) {
         String error = null;
-        int endByte = offset + size;
-        boolean[][] rgn = new boolean[1024][1024];
+        int o = offset;
+        final int endByte = o + size;
+        final boolean[][] rgn = new boolean[1024][1024];
 
         // region starts empty
-        for (int x = 0; x < 1024; ++x) {
-            for (int y = 0; y < 1024; ++y) {
-                rgn[x][y] = false;
+        for (int xPos = 0; xPos < 1024; ++xPos) {
+            for (int yPos = 0; yPos < 1024; ++yPos) {
+                rgn[xPos][yPos] = false;
             }
         }
 
         int curX = 0;
         int curY = 0;
 
-        while (offset < endByte) {
-            byte typeByte = data[offset];
+        while (o < endByte) {
+            final byte typeByte = data[o];
 
-            int type = getEncodedType(typeByte);
-            int len = getEncodedLength(data, offset, type);
+            final int type = getEncodedType(typeByte);
+            final int len = getEncodedLength(data, o, type);
 
             if (type == SMALL_EMPTY_RUN || type == LONG_EMPTY_RUN) {
                 if (len + curX > 1024) {
@@ -662,10 +666,10 @@ public class Region {
                     break;
                 }
 
-                int stopX = curX + len;
+                final int stopX = curX + len;
 
-                for (int x = curX; x < stopX; ++x) {
-                    rgn[curY][x] = true;
+                for (int xPos = curX; xPos < stopX; ++xPos) {
+                    rgn[curY][xPos] = true;
                 }
 
                 curX += len;
@@ -686,12 +690,12 @@ public class Region {
                     break;
                 }
 
-                int stopY = curY + len;
-                int copyY = curY - 1;
+                final int stopY = curY + len;
+                final int copyY = curY - 1;
 
-                for (int x = 0; x < 1024; ++x) {
-                    for (int y = curY; y < stopY; ++y) {
-                        rgn[y][x] = rgn[copyY][x];
+                for (int xPos = 0; xPos < 1024; ++xPos) {
+                    for (int yPos = curY; yPos < stopY; ++yPos) {
+                        rgn[yPos][xPos] = rgn[copyY][xPos];
                     }
                 }
 
@@ -705,10 +709,10 @@ public class Region {
 
             if (type % 2 == 0) // short
             {
-                ++offset;
+                ++o;
             } else // long
             {
-                offset += 2;
+                o += 2;
             }
         }
 
@@ -722,13 +726,13 @@ public class Region {
 
             while (curY < 1024) {
                 if (rgn[curY][curX] == true) {
-                    Rectangle r = new Rectangle();
+                    final Rectangle r = new Rectangle();
                     r.x = curX;
                     r.y = curY;
 
                     int w = 1;
-                    for (int x = curX + 1; x < 1024; ++x) {
-                        if (rgn[curY][x] == false) {
+                    for (int XPos = curX + 1; XPos < 1024; ++XPos) {
+                        if (rgn[curY][XPos] == false) {
                             break;
                         }
 
@@ -738,11 +742,11 @@ public class Region {
                     r.width = w;
 
                     int h = 1;
-                    for (int y = r.y + 1; y < 1024; ++y) {
-                        int endX = r.x + r.width;
+                    for (int yPos = r.y + 1; yPos < 1024; ++yPos) {
+                        final int endX = r.x + r.width;
                         boolean sameRow = true;
-                        for (int x = r.x; x < endX; ++x) {
-                            if (rgn[y][x] == false) {
+                        for (int xPos = r.x; xPos < endX; ++xPos) {
+                            if (rgn[yPos][xPos] == false) {
                                 sameRow = false;
                                 break;
                             }
@@ -757,12 +761,12 @@ public class Region {
 
                     r.height = h;
 
-                    int endX = r.x + r.width;
-                    int endY = r.y + r.height;
+                    final int endX = r.x + r.width;
+                    final int endY = r.y + r.height;
 
-                    for (int y = r.y; y < endY; ++y) {
-                        for (int x = r.x; x < endX; ++x) {
-                            rgn[y][x] = false; // this part has been proccessed
+                    for (int yPos = r.y; yPos < endY; ++yPos) {
+                        for (int xPos = r.x; xPos < endX; ++xPos) {
+                            rgn[yPos][xPos] = false; // this part has been proccessed
                         }
                     }
 
@@ -807,7 +811,7 @@ public class Region {
      * @param type   the type of the fragment at offset in data
      * @return the length that's encoded
      */
-    private static int getEncodedLength(byte[] data, int offset, int type) {
+    private static int getEncodedLength(final byte[] data, final int offset, final int type) {
         int len = -1;
 
         if (type % 2 == 0) // short
@@ -826,7 +830,7 @@ public class Region {
      * @param one the byte for this encoding
      * @return an in 1-32 represeting the length that's currently encoded
      */
-    private static int getEncodedLength(byte one) {
+    private static int getEncodedLength(final byte one) {
         return getBitFragment(one, 4, 8) + 1;
     }
 
@@ -837,8 +841,8 @@ public class Region {
      * @param two the second byte for this encoding
      * @return an in 1-1024 represeting the length that's currently encoded
      */
-    private static int getEncodedLength(byte one, byte two) {
-        int highByte = getBitFragment(one, 7, 8) << 8;
+    private static int getEncodedLength(final byte one, final byte two) {
+        final int highByte = getBitFragment(one, 7, 8) << 8;
         return (highByte | (0xFF & two)) + 1;
     }
 
@@ -849,7 +853,7 @@ public class Region {
      * @param typeByte
      * @return
      */
-    private static int getEncodedType(byte typeByte) {
+    private static int getEncodedType(final byte typeByte) {
         return getBitFragment(typeByte, 1, 3);
     }
 
@@ -861,10 +865,10 @@ public class Region {
      * @param endIndex    the inclusive rightbound index 1234 5678 and startIndex
      * @return the int extracted from the requested bits
      */
-    public static int getBitFragment(byte extractFrom, int startIndex, int endIndex) {
-        int shift = 8 - endIndex;
-        int numBits = endIndex - startIndex + 1;
-        byte mask = (byte) ((0x01 << numBits) - 1);
+    public static int getBitFragment(final byte extractFrom, final int startIndex, final int endIndex) {
+        final int shift = 8 - endIndex;
+        final int numBits = endIndex - startIndex + 1;
+        final byte mask = (byte) ((0x01 << numBits) - 1);
 
         return (extractFrom >> shift) & mask;
     }
